external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_missing_type.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/let_binding_missing_type.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_missing_type.move:3:17
  │
3 │         let x : = 0; // Test a missing let type (but with a colon)
  │                 ^
  │                 │
  │                 Unexpected '='
  │                 Expected a type name

